maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: not found: value j
    while (compteur<=h*j)
                       ^